syntax = "proto3";
package yokai_pubsub;

option go_package = "github.com/yokaiio/yokai_server/proto/pubsub";

import "game/game.proto";

/////////////////////////////////////////////////
// pub/sub
/////////////////////////////////////////////////
message PubStartBattle {
    yokai_game.ClientInfo info = 1;
}

message PubBattleResult {
    yokai_game.ClientInfo info = 1;
    bool win = 2;
}

